--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
             <h2 class="section-title">About Us</h2>
             <div class="about-content">
                 <div class="about-image">
-                    <img src="D:\vs\vs.jpeg" alt="V. Nagaraju - Managing Director">
+                    <img src="vs.jpeg" alt="V. Nagaraju - Managing Director">
                 </div>
                 <div class="about-text">
                     <h2>V. Nagaraju</h2>
